Change format for on-merge version