@@ -209,10 +209,8 @@ lazy val `sbt-platform` = project
     },
     scriptedLaunchOpts := Seq(
       "-Dplugin.version=" + version.value,
-      // .jvmopts is ignored, simulate here
-      "-XX:MaxPermSize=256m",
-      "-Xmx2g",
-      "-Xss2m",
+      "-Xmx1g",
+      "-Xss16m",
       "-Dplatform.debug=true",
       "-Dplatform.test=true"
     ) ++ {
